syntax = "proto3";

package rerpc.internal.crosstest.cross.v0;

option go_package = "github.com/akshayjshah/rerpc/internal/crosstest/crosspb/v0;crosspb";

message PingRequest {
    int64 number = 1;
}

message PingResponse {
    int64 number = 2;
}

message FailRequest {
    int32 code = 1;
}

message FailResponse {
}

service Crosstest {
    rpc Ping(PingRequest) returns (PingResponse) {}
    rpc Fail(FailRequest) returns (FailResponse) {}
}
